--- a/netcore/Views/Branch/Index.cshtml
+++ b/netcore/Views/Branch/Index.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_AdminlteNetcoreIndex.cshtml";
     ViewData["EntityIcon"] = "fa fa-building";
     ViewData["ListTitle"] = "Branch List";
+    ViewData["IndexInfo"] = "Branch office is an outlet of a Company. To get started, you should have minimum one branch as your main office or headquarter.";
 }
 
 
