--- a/netcore/Views/Receiving/Index.cshtml
+++ b/netcore/Views/Receiving/Index.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_AdminlteNetcoreIndex.cshtml";
     ViewData["EntityIcon"] = "fa fa-truck";
     ViewData["ListTitle"] = "Receiving List";
+    ViewData["IndexInfo"] = "Receiving is a process of product receive from your vendor. After inspecting and confirm all goods have been received, warehouse team then will issue internal document called Goods Service Receive Note (GSRN) as a proof of products receive.";
 }
 
 
