--- a/netcore/Views/Shared/_AdminlteNetcoreCreate.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreCreate.cshtml
@@ -59,7 +59,12 @@
                             <!-- /.box -->
                         </div>
                         <div class="col-md-3">
-
+                            <div class="callout callout-info" style="margin-bottom: 0!important;">
+                                <h4><i class="fa fa-info"></i> Info:</h4>
+                                <p>
+                                    @ViewBag.CreateInfo
+                                </p>
+                            </div>
                         </div>
                     </div>
                    
