--- a/netcore/Views/Shipment/Index.cshtml
+++ b/netcore/Views/Shipment/Index.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_AdminlteNetcoreIndex.cshtml";
     ViewData["EntityIcon"] = "fa fa-plane";
     ViewData["ListTitle"] = "Shipment List";
+    ViewData["IndexInfo"] = "Shipment is a process of delivering the order to your customer. ";
 }
 
 
