--- a/netcore/Views/TransferIn/Index.cshtml
+++ b/netcore/Views/TransferIn/Index.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_AdminlteNetcoreIndex.cshtml";
     ViewData["EntityIcon"] = "fa fa-download";
     ViewData["ListTitle"] = "Goods Receive List";
+    ViewData["IndexInfo"] = "Goods Receive is a process of receiving the products to a warehouse based on transfer order (TO)";
 }
 
 
