--- a/netcore/Views/TransferOut/Index.cshtml
+++ b/netcore/Views/TransferOut/Index.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_AdminlteNetcoreIndex.cshtml";
     ViewData["EntityIcon"] = "fa fa-upload";
     ViewData["ListTitle"] = "Goods Issue List";
+    ViewData["IndexInfo"] = "Goods Issue is a process of delivering the products from a warehouse based on transfer order (TO)";
 }
 
 
