--- a/netcore/Views/Warehouse/Index.cshtml
+++ b/netcore/Views/Warehouse/Index.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_AdminlteNetcoreIndex.cshtml";
     ViewData["EntityIcon"] = "fa fa-cubes";
     ViewData["ListTitle"] = "Warehouse List";
+    ViewData["IndexInfo"] = "Warehouse is commercial building for storage of goods or products. One branch office can have single or multiple warehouse.";
 }
 
 
