--- a/netcore/Views/Branch/Create.cshtml
+++ b/netcore/Views/Branch/Create.cshtml
@@ -5,6 +5,7 @@
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_AdminlteNetcoreCreate.cshtml";
     ViewData["EntityIcon"] = "fa fa-building-o";
+    ViewData["CreateInfo"] = "Branch office is an outlet of a Company. To get started, you should have minimum one branch as your main office or headquarter.";
 }
 
 
