--- a/netcore/Views/Customer/Index.cshtml
+++ b/netcore/Views/Customer/Index.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_AdminlteNetcoreIndex.cshtml";
     ViewData["EntityIcon"] = "fa fa-bank";
     ViewData["ListTitle"] = "Customer List";
+    ViewData["IndexInfo"] = "Customer is an organization that buy products from your company. You sell products to them.";
 }
 
 
