--- a/netcore/Views/Product/Index.cshtml
+++ b/netcore/Views/Product/Index.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_AdminlteNetcoreIndex.cshtml";
     ViewData["EntityIcon"] = "fa fa-tags";
     ViewData["ListTitle"] = "Product List";
+    ViewData["IndexInfo"] = "Product is a merchandise that can be offered to the market for sell to satisfy demand. Before you can sell products to customers, you should have the product stock in hand by buying the product from vendors.";
 }
 
 
