--- a/netcore/Views/PurchaseOrder/Delete.cshtml
+++ b/netcore/Views/PurchaseOrder/Delete.cshtml
@@ -4,6 +4,11 @@
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_AdminlteNetcoreDelete.cshtml";
     ViewData["EntityIcon"] = "fa fa-file-text";
+    ViewData["IsCanDeleted"] = false;
+    if (Model.purchaseOrderStatus != netcore.Models.Invent.PurchaseOrderStatus.Completed)
+    {
+        ViewData["IsCanDeleted"] = true;
+    }
 }
 
 
