--- a/netcore/Views/PurchaseOrder/Index.cshtml
+++ b/netcore/Views/PurchaseOrder/Index.cshtml
@@ -5,6 +5,8 @@
     Layout = "~/Views/Shared/_AdminlteNetcoreIndex.cshtml";
     ViewData["EntityIcon"] = "fa fa-file-text";
     ViewData["ListTitle"] = "Purchase Order List";
+    ViewData["IndexInfo"] = "Purchase Order (PO) is a commercial document issued by your company as a buyer to your vendor as a products seller." +
+                " There are three status of PO: 1. Draft (Unconfirmed PO, not ready to receive), 2. Open (Confirmed PO, ready to receive) and 3. Completed (Closed PO, already receive the products).";
 }
 
 
