--- a/netcore/Views/SalesOrder/Index.cshtml
+++ b/netcore/Views/SalesOrder/Index.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_AdminlteNetcoreIndex.cshtml";
     ViewData["EntityIcon"] = "fa fa-cart-plus";
     ViewData["ListTitle"] = "Sales Order List";
+    ViewData["IndexInfo"] = "Sales Order (SO) is a confirmation document sent to your customer before delivering the goods (shipment). There are three status of SO: 1. Draft (Unconfirmed SO, not ready for shipment), 2. Open (Confirmed SO, ready for shipment) and 3. Completed (Closed SO, already shiped the products).";
 }
 
 
