--- a/netcore/Views/TransferOrder/Create.cshtml
+++ b/netcore/Views/TransferOrder/Create.cshtml
@@ -27,7 +27,7 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        <input asp-for="transferOrderDate" class="form-control pull-right datepicker" type="text" />
+                        <input asp-for="transferOrderDate" value="@Model.transferOrderDate.ToString("MM/dd/yyyy")" class="form-control pull-right datepicker" type="text" />
                     </div>
                     <span asp-validation-for="transferOrderDate" class="text-danger"></span>
                 </div>
