--- a/netcore/Views/TransferOrder/Index.cshtml
+++ b/netcore/Views/TransferOrder/Index.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_AdminlteNetcoreIndex.cshtml";
     ViewData["EntityIcon"] = "fa fa-recycle";
     ViewData["ListTitle"] = "Transfer Order List";
+    ViewData["IndexInfo"] = "Transfer Order (TO) is a process of transfering products from one warehouse to another warehouse.";
 }
 
 
