--- a/netcore/Views/Branch/Delete.cshtml
+++ b/netcore/Views/Branch/Delete.cshtml
@@ -1,10 +1,16 @@
 ﻿@model netcore.Models.Invent.Branch
-
+@inject netcore.Data.ApplicationDbContext _context;
 @{
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_AdminlteNetcoreDelete.cshtml";
     ViewData["EntityIcon"] = "fa fa-building-o";
-
+    ViewData["DeleteInfo"] = "Branch that already have warehouses can not be deleted.";
+    netcore.Models.Invent.Warehouse wh = _context.Warehouse.Where(x => x.branchId.Equals(Model.branchId)).FirstOrDefault();
+    ViewData["IsCanDeleted"] = false;
+    if (wh == null)
+    {
+        ViewData["IsCanDeleted"] = true;
+    }
 }
 
 
