--- a/netcore/Views/Shipment/Delete.cshtml
+++ b/netcore/Views/Shipment/Delete.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_AdminlteNetcoreDelete.cshtml";
     ViewData["EntityIcon"] = "fa fa-plane";
+    ViewData["DeleteInfo"] = "Delete Delivery order (shipment) will roll back related SO status to [Open]";
 }
 
 
