--- a/netcore/Views/Branch/Index.cshtml
+++ b/netcore/Views/Branch/Index.cshtml
@@ -43,9 +43,9 @@
         <tr>
             <td>
                 <div class="tools">
-                    <a asp-action="Edit" asp-route-id="@item.branchId"><i class="fa fa-pencil"></i></a>
-                    <a asp-action="Details" asp-route-id="@item.branchId"><i class="fa fa-list"></i></a>
-                    <a asp-action="Delete" asp-route-id="@item.branchId"><i class="fa fa-trash text-red"></i></a>
+                    <a asp-action="Edit" asp-route-id="@item.branchId" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
+                    <a asp-action="Details" asp-route-id="@item.branchId" class="btn btn-primary btn-xs"><i class="fa fa-list"></i></a>
+                    <a asp-action="Delete" asp-route-id="@item.branchId" class="btn btn-danger btn-xs"><i class="fa fa-trash"></i></a>
                 </div>
                 
             </td>
