--- a/netcore/Views/Customer/Create.cshtml
+++ b/netcore/Views/Customer/Create.cshtml
@@ -5,6 +5,7 @@
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_AdminlteNetcoreCreate.cshtml";
     ViewData["EntityIcon"] = "fa fa-bank";
+    ViewData["CreateInfo"] = "Customer is an organization that buy products from your company. You sell products to them.";
 }
 
 
