--- a/netcore/Views/Customer/Delete.cshtml
+++ b/netcore/Views/Customer/Delete.cshtml
@@ -1,9 +1,17 @@
 ﻿@model netcore.Models.Invent.Customer
+@inject netcore.Data.ApplicationDbContext _context;
 
 @{
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_AdminlteNetcoreDelete.cshtml";
     ViewData["EntityIcon"] = "fa fa-bank";
+    ViewData["DeleteInfo"] = "Customer that already have transactions (SO) can not be deleted.";
+    netcore.Models.Invent.SalesOrder salesOrder = _context.SalesOrder.Where(x => x.customerId.Equals(Model.customerId)).FirstOrDefault();
+    ViewData["IsCanDeleted"] = false;
+    if (salesOrder == null)
+    {
+        ViewData["IsCanDeleted"] = true;
+    }
 }
 
 
