--- a/netcore/Views/Product/Delete.cshtml
+++ b/netcore/Views/Product/Delete.cshtml
@@ -1,9 +1,18 @@
 ﻿@model netcore.Models.Invent.Product
-
+@inject netcore.Data.ApplicationDbContext _context;
 @{
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_AdminlteNetcoreDelete.cshtml";
     ViewData["EntityIcon"] = "fa fa-tags";
+    ViewData["DeleteInfo"] = "Product that already have transactions (PO, SO, Transfer Order) can not be deleted.";
+    netcore.Models.Invent.PurchaseOrderLine poline = _context.PurchaseOrderLine.Where(x => x.productId.Equals(Model.productId)).FirstOrDefault();
+    netcore.Models.Invent.SalesOrderLine soline = _context.SalesOrderLine.Where(x => x.productId.Equals(Model.productId)).FirstOrDefault();
+    netcore.Models.Invent.TransferOrderLine toline = _context.TransferOrderLine.Where(x => x.productId.Equals(Model.productId)).FirstOrDefault();
+    ViewData["IsCanDeleted"] = false;
+    if (poline == null && soline == null && toline == null)
+    {
+        ViewData["IsCanDeleted"] = true;
+    }
 }
 
 
