--- a/netcore/Views/PurchaseOrder/Delete.cshtml
+++ b/netcore/Views/PurchaseOrder/Delete.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_AdminlteNetcoreDelete.cshtml";
     ViewData["EntityIcon"] = "fa fa-file-text";
+    ViewData["DeleteInfo"] = "[Completed] Purchase Order (PO) can not be deleted. Rollback status to [Open] by deleting related Purchase Receive (Receiving)";
     ViewData["IsCanDeleted"] = false;
     if (Model.purchaseOrderStatus != netcore.Models.Invent.PurchaseOrderStatus.Completed)
     {
