--- a/netcore/Views/PurchaseOrder/Edit.cshtml
+++ b/netcore/Views/PurchaseOrder/Edit.cshtml
@@ -4,18 +4,21 @@
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_AdminlteNetcoreEdit.cshtml";
     ViewData["EntityIcon"] = "fa fa-file-text";
+    ViewData["EditInfo"] = " PO have three status: 1. Draft (Unconfirmed PO, not ready to receive), 2. Open (Confirmed PO, ready to receive) and 3. Completed (Closed PO, already receive the products). Change status from [Draft] to [Open] to confirm the order. [Completed] status is auto set when PO used in Product Receive / Receiving.";
 }
 
-
+@Html.Partial("_StatusMessage", (string)ViewBag.StatusMessage)
 <div class="row">
     <div class="col-md-12">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <input type="hidden" asp-for="purchaseOrderId" />
+        <input type="hidden" asp-for="purchaseOrderNumber" />
+
         <div class="row">
             <div class="col-md-4">
                 <div class="form-group">
                     <label asp-for="purchaseOrderNumber" class="control-label"></label>
-                    <input asp-for="purchaseOrderNumber" class="form-control" />
+                    <input asp-for="purchaseOrderNumber" class="form-control" disabled/>
                     <span asp-validation-for="purchaseOrderNumber" class="text-danger"></span>
                 </div>
             </div>
@@ -42,7 +45,7 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        <input asp-for="poDate" class="form-control pull-right datepicker" type="text" />
+                        <input asp-for="poDate" value="@Model.poDate.ToString("MM/dd/yyyy")" class="form-control pull-right datepicker" type="text" />
                     </div>
                     <span asp-validation-for="poDate" class="text-danger"></span>
                 </div>
@@ -54,7 +57,7 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        <input asp-for="deliveryDate" class="form-control pull-right datepicker" type="text" />
+                        <input asp-for="deliveryDate" value="@Model.poDate.ToString("MM/dd/yyyy")" class="form-control pull-right datepicker" type="text" />
                     </div>
                     <span asp-validation-for="deliveryDate" class="text-danger"></span>
                 </div>
