--- a/netcore/Views/PurchaseOrder/Index.cshtml
+++ b/netcore/Views/PurchaseOrder/Index.cshtml
@@ -68,9 +68,9 @@
         <tr>
             <td>
                 <div class="tools">
-                    <a asp-action="Edit" asp-route-id="@item.purchaseOrderId"><i class="fa fa-pencil"></i></a> 
-                    <a asp-action="Details" asp-route-id="@item.purchaseOrderId"><i class="fa fa-list"></i></a> 
-                    <a asp-action="Delete" asp-route-id="@item.purchaseOrderId"><i class="fa fa-trash text-red"></i></a>
+                    <a asp-action="Edit" asp-route-id="@item.purchaseOrderId" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
+                    <a asp-action="Details" asp-route-id="@item.purchaseOrderId" class="btn btn-primary btn-xs"><i class="fa fa-list"></i></a>
+                    <a asp-action="Delete" asp-route-id="@item.purchaseOrderId" class="btn btn-danger btn-xs"><i class="fa fa-trash"></i></a>
                 </div>
                 
             </td>
@@ -105,7 +105,28 @@
                 @Html.DisplayFor(modelItem => item.picVendor)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.purchaseOrderStatus)
+                @if (item.purchaseOrderStatus == netcore.Models.Invent.PurchaseOrderStatus.Completed)
+                {
+                    <span class="label label-success">
+                        @Html.DisplayFor(modelItem => item.purchaseOrderStatus)
+                    </span>
+
+                }
+                @if (item.purchaseOrderStatus == netcore.Models.Invent.PurchaseOrderStatus.Open)
+                {
+                    <span class="label label-primary">
+                        @Html.DisplayFor(modelItem => item.purchaseOrderStatus)
+                    </span>
+
+                }
+                 @if (item.purchaseOrderStatus == netcore.Models.Invent.PurchaseOrderStatus.Draft)
+                 {
+                    <span class="label label-warning">
+                        @Html.DisplayFor(modelItem => item.purchaseOrderStatus)
+                    </span>
+
+                 }
+                
             </td>
             <td class="hidden">
                 @Html.DisplayFor(modelItem => item.totalDiscountAmount)
