--- a/netcore/Views/Receiving/Create.cshtml
+++ b/netcore/Views/Receiving/Create.cshtml
@@ -5,6 +5,7 @@
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_AdminlteNetcoreCreate.cshtml";
     ViewData["EntityIcon"] = "fa fa-truck";
+    ViewData["CreateInfo"] = "Receiving is a process of product receive from your vendor. After inspecting and confirm all goods have been received, warehouse team then will issue internal document called Goods Service Receive Note (GSRN) as a proof of products receive.";
 }
 
 @Html.Partial("_StatusMessage", (string)ViewBag.StatusMessage)
