--- a/netcore/Views/Receiving/Delete.cshtml
+++ b/netcore/Views/Receiving/Delete.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_AdminlteNetcoreDelete.cshtml";
     ViewData["EntityIcon"] = "fa fa-truck";
+    ViewData["DeleteInfo"] = "Delete Purchase Receive (Receiving) will roll back related PO status to [Open]";
 }
 
 
