--- a/netcore/Views/SalesOrder/Delete.cshtml
+++ b/netcore/Views/SalesOrder/Delete.cshtml
@@ -4,6 +4,13 @@
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_AdminlteNetcoreDelete.cshtml";
     ViewData["EntityIcon"] = "fa fa-cart-plus";
+    ViewData["DeleteInfo"] = "[Completed] Sales Order (SO) can not be deleted. Rollback status to [Open] by deleting related Delivery Order (Shipment)";
+    ViewData["IsCanDeleted"] = false;
+    if (Model.salesOrderStatus != netcore.Models.Invent.SalesOrderStatus.Completed)
+    {
+        ViewData["IsCanDeleted"] = true;
+    }
+
 }
 
 
