--- a/netcore/Views/Shared/_AdminlteNetcoreBasicScripts.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreBasicScripts.cshtml
@@ -17,6 +17,12 @@
 <!-- DataTables -->
 <script src="~/adminlte/components/datatables.net/js/jquery.dataTables.min.js"></script>
 <script src="~/adminlte/components/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/1.5.2/js/dataTables.buttons.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
+<script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.html5.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.print.min.js"></script>
 <!-- Toastr -->
 <script src="~/lib/toastr/toastr.min.js"></script>
 <!-- Sweetalert -->
