--- a/netcore/Views/Shared/_AdminlteNetcoreDelete.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreDelete.cshtml
@@ -71,7 +71,12 @@
                         <!-- /.box -->
                     </div>
                     <div class="col-md-3">
-
+                        <div class="callout callout-info" style="margin-bottom: 0!important;">
+                            <h4><i class="fa fa-info"></i> Info:</h4>
+                            <p>
+                                @ViewBag.DeleteInfo
+                            </p>
+                        </div>
                     </div>
                 </div>
                
