--- a/netcore/Views/Shared/_AdminlteNetcoreEdit.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreEdit.cshtml
@@ -58,7 +58,16 @@
                             <!-- /.box -->
                         </div>
                         <div class="col-md-3">
-                            
+                            @if (!String.IsNullOrEmpty(ViewBag.EditInfo))
+                            {
+                                <div class="callout callout-info" style="margin-bottom: 0!important;">
+                                    <h4><i class="fa fa-info"></i> Info:</h4>
+                                    <p>
+                                        @ViewBag.EditInfo
+                                    </p>
+                                </div>
+
+                            }
                         </div>
                     </div>
                    
