--- a/netcore/Views/Shipment/Create.cshtml
+++ b/netcore/Views/Shipment/Create.cshtml
@@ -5,6 +5,7 @@
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_AdminlteNetcoreCreate.cshtml";
     ViewData["EntityIcon"] = "fa fa-plane";
+    ViewData["CreateInfo"] = "Shipment is a process of delivering the order to your customer.";
 }
 
 @Html.Partial("_StatusMessage", (string)ViewBag.StatusMessage)
@@ -85,7 +86,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <label asp-for="warehouseId" class="control-label"></label>
-                    <select asp-for="warehouseId" class="form-control select2" asp-items="ViewBag.warehouseId"></select>
+                    <select asp-for="warehouseId" class="form-control select2" asp-items="@()"></select>
                     <span asp-validation-for="warehouseId" class="text-danger"></span>
                 </div>
             </div>
