--- a/netcore/Views/Shipment/Index.cshtml
+++ b/netcore/Views/Shipment/Index.cshtml
@@ -52,8 +52,8 @@
         <tr>
             <td>
                 <div class="tools">
-                    <a asp-action="Details" asp-route-id="@item.shipmentId"><i class="fa fa-list"></i></a> 
-                    <a asp-action="Delete" asp-route-id="@item.shipmentId"><i class="fa fa-trash text-red"></i></a>
+                    <a asp-action="Details" asp-route-id="@item.shipmentId" class="btn btn-primary btn-xs"><i class="fa fa-list"></i></a>
+                    <a asp-action="Delete" asp-route-id="@item.shipmentId" class="btn btn-danger btn-xs"><i class="fa fa-trash"></i></a>
                 </div>
                 
             </td>
@@ -61,7 +61,7 @@
                 @Html.DisplayFor(modelItem => item.shipmentNumber)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.shipmentDate)
+                @item.shipmentDate.ToString("dd-MMM-yyyy")
             </td>
             <td class="hidden">
                 @Html.DisplayFor(modelItem => item.customerPO)
