--- a/netcore/Views/TransferOut/Index.cshtml
+++ b/netcore/Views/TransferOut/Index.cshtml
@@ -46,8 +46,8 @@
         <tr>
             <td>
                 <div class="tools">
-                    <a asp-action="Details" asp-route-id="@item.transferOutId"><i class="fa fa-list"></i></a> 
-                    <a asp-action="Delete" asp-route-id="@item.transferOutId"><i class="fa fa-trash text-red"></i></a>
+                    <a asp-action="Details" asp-route-id="@item.transferOutId" class="btn btn-primary btn-xs"><i class="fa fa-list"></i></a>
+                    <a asp-action="Delete" asp-route-id="@item.transferOutId" class="btn btn-danger btn-xs"><i class="fa fa-trash"></i></a>
                 </div>
           
             </td>
