--- a/netcore/Views/Warehouse/Create.cshtml
+++ b/netcore/Views/Warehouse/Create.cshtml
@@ -5,6 +5,7 @@
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_AdminlteNetcoreCreate.cshtml";
     ViewData["EntityIcon"] = "fa fa-cubes";
+    ViewData["CreateInfo"] = "Warehouse is commercial building for storage of goods or products. One branch office can have single or multiple warehouse.";
 }
 
 
