--- a/netcore/Views/Warehouse/Delete.cshtml
+++ b/netcore/Views/Warehouse/Delete.cshtml
@@ -1,9 +1,19 @@
 ﻿@model netcore.Models.Invent.Warehouse
+@inject netcore.Data.ApplicationDbContext _context;
 
 @{
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_AdminlteNetcoreDelete.cshtml";
     ViewData["EntityIcon"] = "fa fa-cubes";
+    ViewData["DeleteInfo"] = "Warehouse that already have transactions (Receiving, Shipment, Transfer Order) can not be deleted.";
+    netcore.Models.Invent.Receiving receiving = _context.Receiving.Where(x => x.warehouseId.Equals(Model.warehouseId)).FirstOrDefault();
+    netcore.Models.Invent.Shipment shipment = _context.Shipment.Where(x => x.warehouseId.Equals(Model.warehouseId)).FirstOrDefault();
+    netcore.Models.Invent.TransferOrder to = _context.TransferOrder.Where(x => x.warehouseIdFrom.Equals(Model.warehouseId) || x.warehouseIdTo.Equals(Model.warehouseId)).FirstOrDefault();
+    ViewData["IsCanDeleted"] = false;
+    if (receiving == null && shipment == null && to == null)
+    {
+        ViewData["IsCanDeleted"] = true;
+    }
 }
 
 
