--- a/netcore/Views/Receiving/Create.cshtml
+++ b/netcore/Views/Receiving/Create.cshtml
@@ -83,5 +83,26 @@
 
 
 @section Scripts {
+
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script>
+        $(document).ready(function() {
+            var items = "<option value='0'>Select</option>";
+            $('#warehouseId').html(items);
+
+            $('#purchaseOrderId').change(function () {
+                var url = '@Url.Content("~/")' + "Receiving/GetWarehouseByOrder";
+                var ddlsource = '#purchaseOrderId';
+                $.getJSON(url, { purchaseOrderId: $(ddlsource).val() }, function (data) {
+                    var items = '';
+                    $('#warehouseId').empty();
+                    $.each(data, function (i, warehouse) {
+                        items += "<option value='" + warehouse.value + "'>" + warehouse.text + "</option>";
+                    });
+                    $('#warehouseId').html(items);
+                });
+            });
+        });
+    </script>
 }
