--- a/netcore/Views/Shipment/Create.cshtml
+++ b/netcore/Views/Shipment/Create.cshtml
@@ -86,7 +86,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <label asp-for="warehouseId" class="control-label"></label>
-                    <select asp-for="warehouseId" class="form-control select2" asp-items="@()"></select>
+                    <select asp-for="warehouseId" class="form-control select2" asp-items="ViewBag.warehouseId"></select>
                     <span asp-validation-for="warehouseId" class="text-danger"></span>
                 </div>
             </div>
@@ -97,5 +97,26 @@
 
 
 @section Scripts {
+
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script>
+        $(document).ready(function() {
+            var items = "<option value='0'>Select</option>";
+            $('#warehouseId').html(items);
+
+            $('#salesOrderId').change(function () { 
+                var url = '@Url.Content("~/")' + "Shipment/GetWarehouseByOrder";
+                var ddlsource = '#salesOrderId';
+                $.getJSON(url, { salesOrderId: $(ddlsource).val() }, function (data) { 
+                    var items = '';
+                    $('#warehouseId').empty();
+                    $.each(data, function (i, warehouse) { 
+                        items += "<option value='" + warehouse.value + "'>" + warehouse.text + "</option>";
+                    });
+                    $('#warehouseId').html(items);
+                });
+            });
+        });
+    </script>
 }
