--- a/netcore/Views/TransferIn/Create.cshtml
+++ b/netcore/Views/TransferIn/Create.cshtml
@@ -5,6 +5,7 @@
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_AdminlteNetcoreCreate.cshtml";
     ViewData["EntityIcon"] = "fa fa-download";
+    ViewData["CreateInfo"] = "Goods receive or transfer in, can only process [Open] transfer order that already processed the goods issue.";
 }
 
 @Html.Partial("_StatusMessage", (string)ViewBag.StatusMessage)
