--- a/netcore/Views/TransferIn/Delete.cshtml
+++ b/netcore/Views/TransferIn/Delete.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_AdminlteNetcoreDelete.cshtml";
     ViewData["EntityIcon"] = "fa fa-download";
+    ViewData["DeleteInfo"] = "Deleting goods receive will rollback the status of transfer order into [Open]. After this process, should be followed by deletion of goods issue.";
 }
 
 
