--- a/netcore/Views/TransferOrder/Delete.cshtml
+++ b/netcore/Views/TransferOrder/Delete.cshtml
@@ -4,6 +4,14 @@
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_AdminlteNetcoreDelete.cshtml";
     ViewData["EntityIcon"] = "fa fa-recycle";
+    ViewData["DeleteInfo"] = "[Completed] Transfer Order (TO) can not be deleted. Rollback status to [Open] by deleting related Goods Issue and Goods Receive";
+    ViewData["IsCanDeleted"] = false;
+    if (Model.transferOrderStatus != netcore.Models.Invent.TransferOrderStatus.Completed
+        && Model.isIssued == false
+        && Model.isReceived == false)
+    {
+        ViewData["IsCanDeleted"] = true;
+    }
 }
 
 
