--- a/netcore/Views/TransferOut/Create.cshtml
+++ b/netcore/Views/TransferOut/Create.cshtml
@@ -5,6 +5,7 @@
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_AdminlteNetcoreCreate.cshtml";
     ViewData["EntityIcon"] = "fa fa-upload";
+    ViewData["CreateInfo"] = "Goods issue or transfer out, can only process [Open] transfer order that have not been processed as goods issue or goods receive. Already processed transfer order will not show in dropdownlist.";
 }
 
 @Html.Partial("_StatusMessage", (string)ViewBag.StatusMessage)
