--- a/netcore/Views/TransferOut/Delete.cshtml
+++ b/netcore/Views/TransferOut/Delete.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_AdminlteNetcoreDelete.cshtml";
     ViewData["EntityIcon"] = "fa fa-upload";
+    ViewData["DeleteInfo"] = "Deleting goods issue will rollback the status of transfer order into [Open]. But this process can only happen if goods receive already deleted first.";
 }
 
 
