--- a/netcore/Views/Receiving/Details.cshtml
+++ b/netcore/Views/Receiving/Details.cshtml
@@ -75,8 +75,8 @@
             <!-- /.box-body -->
             <div class="box-footer">
                 <div class="form-group">
-                   
                     <a asp-action="Index" class="btn btn-default">Back to List</a>
+                    <a asp-action="ShowGSRN" asp-route-id="@Model.receivingId" class="btn btn-primary pull-right"><i class="fa fa-print"></i> Print GSRN</a>
                 </div>
             </div>
             <!-- /.box-footer-->
