--- a/netcore/Views/TransferIn/Details.cshtml
+++ b/netcore/Views/TransferIn/Details.cshtml
@@ -75,7 +75,7 @@
             <!-- /.box-body -->
             <div class="box-footer">
                 <div class="form-group">
-                   
+                    <a asp-action="ShowTransferIn" asp-route-id="@Model.transferInId" class="btn btn-primary pull-right"><i class="fa fa-print"></i> Print Goods Receive</a>
                     <a asp-action="Index" class="btn btn-default">Back to List</a>
                 </div>
             </div>
