--- a/netcore/Views/TransferOrder/Details.cshtml
+++ b/netcore/Views/TransferOrder/Details.cshtml
@@ -77,6 +77,7 @@
             <div class="box-footer">
                 <div class="form-group">
                     <a asp-action="Edit" asp-route-id="@Model.transferOrderId" class="btn btn-primary">Edit</a>
+                    <a asp-action="ShowTransferOrder" asp-route-id="@Model.transferOrderId" class="btn btn-primary pull-right"><i class="fa fa-print"></i> Print Transfer Order</a>
                     <a asp-action="Index" class="btn btn-default">Back to List</a>
                 </div>
             </div>
