--- a/netcore/Views/TransferOut/Details.cshtml
+++ b/netcore/Views/TransferOut/Details.cshtml
@@ -75,7 +75,7 @@
             <!-- /.box-body -->
             <div class="box-footer">
                 <div class="form-group">
-                    
+                    <a asp-action="ShowTransferOut" asp-route-id="@Model.transferOutId" class="btn btn-primary pull-right"><i class="fa fa-print"></i> Print Goods Issue</a>
                     <a asp-action="Index" class="btn btn-default">Back to List</a>
                 </div>
             </div>
