--- a/netcore/Views/SalesOrder/Details.cshtml
+++ b/netcore/Views/SalesOrder/Details.cshtml
@@ -125,6 +125,7 @@
             <div class="box-footer">
                 <div class="form-group">
                     <a asp-action="Edit" asp-route-id="@Model.salesOrderId" class="btn btn-primary">Edit</a>
+                    <a asp-action="ShowSalesOrder" asp-route-id="@Model.salesOrderId" class="btn btn-primary pull-right"><i class="fa fa-print"></i> Print Sales Order</a>
                     <a asp-action="Index" class="btn btn-default">Back to List</a>
                 </div>
             </div>
